--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="shortcut icon" href="/icons/icon-32.png">
 
 
-<link rel="icon" href="/icons/icon-32.png" sizes="32x32">
+<link rel="icon" href="icons/icon-32.png" sizes="32x32">
 <link rel="icon" href="/icons/icon-192.png" sizes="192x192">
 
 
