--- a/index.html
+++ b/index.html
@@ -2,37 +2,29 @@
 <html lang="en" class="light">
 <head>
    <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
+   <!-- PWA Meta Tags -->
+   <meta name="theme-color" content="#000000">
+   <meta name="mobile-web-app-capable" content="yes">
+   <meta name="apple-mobile-web-app-capable" content="yes">
+   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+   <meta name="apple-mobile-web-app-title" content="Live Beats">
+   
+   <!-- Manifest -->
+   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 
-<link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
-<meta name="theme-color" content="#000000">
-<meta name="application-name" content="Live Beats">
+   <!-- Icons - All paths made relative for GitHub Pages -->
+   <link rel="shortcut icon" href="icons/icon-32.png">
+   <link rel="icon" href="icons/icon-32.png" sizes="32x32">
+   <link rel="icon" href="icons/icon-192.png" sizes="192x192">
+   <link rel="apple-touch-icon" href="icons/icon-180.png">
+   <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
 
-
-
-<link rel="shortcut icon" href="/icons/icon-32.png">
-
-
-<link rel="icon" href="icons/icon-32.png" sizes="32x32">
-<link rel="icon" href="/icons/icon-192.png" sizes="192x192">
-
-
-<link rel="icon" sizes="192x192" href="/icons/icon-192.png">
-<link rel="icon" sizes="512x512" href="/icons/icon-512.png">
-<meta name="mobile-web-app-capable" content="yes">
-
-
-<link rel="apple-touch-icon" href="/icons/icon-180.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180.png">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="Live Beats">
-
-
-<meta name="msapplication-TileImage" content="/icons/icon-144.png">
-<meta name="msapplication-TileColor" content="#000000">
-<meta name="msapplication-config" content="/browserconfig.xml">
+   <!-- Windows-specific tags -->
+   <meta name="msapplication-TileImage" content="icons/icon-144.png">
+   <meta name="msapplication-TileColor" content="#000000">
+   <meta name="msapplication-config" content="browserconfig.xml">
 
 <title>Live Beats WebRadio Player</title>
 
