--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
    <meta name="msapplication-config" content="browserconfig.xml">
 
 <title>Live Beats WebRadio Player</title>
-
+<button id="installButton" class="hidden fixed bottom-20 right-4 z-50 bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full shadow-lg transition-all duration-200">
+  <i class="fas fa-download mr-2"></i> Install App
+</button>
 <script>
   // Service Worker Registration
   if ('serviceWorker' in navigator) {
