--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
    <meta name="msapplication-config" content="browserconfig.xml">
 
 <title>Live Beats WebRadio Player</title>
-<button id="installButton" class="hidden fixed bottom-20 right-4 z-50 bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full shadow-lg transition-all duration-200">
-  <i class="fas fa-download mr-2"></i> Install App
+<button id="installButton" 
+        class="hidden fixed bottom-32 right-4 z-[60] bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full shadow-lg transition-all duration-200 flex items-center"
+        aria-label="Install Live Beats App">
+  <i class="fas fa-download mr-2"></i> Install
 </button>
 <script>
   // Service Worker Registration
