--- a/index.html
+++ b/index.html
@@ -196,6 +196,18 @@
             </div>
         </div>
 
+       <div class="mb-6 text-center flex justify-center space-x-4">
+    <button id="openAddModalBtn" class="btn-primary">
+        <i class="fas fa-plus-circle mr-2"></i>Add New Favorite
+    </button>
+    <button id="importFavoritesBtn" class="btn-secondary">
+        <i class="fas fa-file-import mr-2"></i>Import Favorites
+    </button>
+</div>
+
+
+<input type="file" id="fileImportInput" accept=".lbrx,.txt" class="hidden">
+
         <div class="mb-6 text-center">
             <button id="openAddModalBtn" class="btn-primary">
                 <i class="fas fa-plus-circle mr-2"></i>Add New Favorite
