--- a/index.html
+++ b/index.html
@@ -360,6 +360,17 @@ function showImportResults(results) {
             transform: translateY(0);
         }
 
+
+/* Import/Export buttons */
+.btn-import {
+    @apply btn bg-purple-600 hover:bg-purple-700 text-white hover:scale-105;
+}
+.btn-export {
+    @apply btn bg-green-600 hover:bg-green-700 text-white hover:scale-105;
+}
+
+       
+
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 min-h-screen flex flex-col">
