--- a/index.html
+++ b/index.html
@@ -208,16 +208,17 @@
             </div>
 
             <div class="flex items-center space-x-2 sm:space-x-3">
-                <button id="stopBtn" class="icon-btn text-xl sm:text-2xl text-red-500 dark:text-red-400" aria-label="Stop">
+                   <button id="stopBtn" class="icon-btn text-2xl sm:text-3xl text-red-500 dark:text-red-400" aria-label="Stop">
                     <i class="fas fa-stop"></i>
                 </button>
-                <button id="playPauseBtn" class="icon-btn text-2xl sm:text-3xl text-blue-600 dark:text-blue-400" aria-label="Play">
+                  <button id="playPauseBtn" class="icon-btn text-3xl sm:text-4xl text-blue-600 dark:text-blue-400" aria-label="Play">
                     <i class="fas fa-play"></i>
                 </button>
                 <div class="flex items-center space-x-1 sm:space-x-2">
-                    <i class="fas fa-volume-down text-gray-600 dark:text-gray-300 text-sm sm:text-base"></i>
-                    <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5" class="w-20 sm:w-24 h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700 accent-blue-600 dark:accent-blue-400">
-                    <i class="fas fa-volume-up text-gray-600 dark:text-gray-300 text-sm sm:text-base"></i>
+                    <i class="fas fa-volume-down text-gray-600 dark:text-gray-300 text-base sm:text-lg"></i>
+                    <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5" 
+               class="w-24 sm:w-32 h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700 accent-blue-600 dark:accent-blue-400">
+                    <i class="fas fa-volume-up text-gray-600 dark:text-gray-300 text-base sm:text-lg"></i>
                 </div>
             </div>
         </div>
