--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
             <h1 class="text-xl sm:text-2xl font-bold text-blue-600 dark:text-blue-400">Live Beats WebRadio Player</h1>
             <button id="themeToggleBtn" class="icon-btn text-xl" aria-label="Toggle theme">
                 <i class="fas fa-moon"></i> </button>
+              <!-- Visible app icon -->
+            <img src="icons/icon-192.png" alt="Live Beats Icon" 
+                 class="absolute inset-0 w-full h-full rounded-lg z-0">
         </div>
     </header>
 
