--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@
                 <button id="stopBtn" class="icon-btn text-2xl sm:text-3xl text-red-500 dark:text-red-400" aria-label="Stop">
                     <i class="fas fa-stop"></i>
                 </button>
-                <button id="playPauseBtn" class="icon-btn text-3xl sm:text-4xl bg-gradient-to-r from-blue-600 to-indigo-600 text-white hover:from-blue-700 hover:to-indigo-700" aria-label="Play">
-                    <i class="fas fa-play"></i>
-                </button>
+            <button id="playPauseBtn" class="icon-btn text-3xl sm:text-4xl text-green-500 hover:text-green-600 dark:text-green-400 dark:hover:text-green-300" aria-label="Play">
+    <i class="fas fa-play"></i>
+</button>
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-volume-down text-gray-600 dark:text-gray-300 text-base sm:text-lg"></i>
                     <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5" 
