--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@
 </button>
                 <div class="flex items-center space-x-2">
                     <i class="fas fa-volume-down text-gray-600 dark:text-gray-300 text-base sm:text-lg"></i>
-                    <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5" 
-                           class="w-32 sm:w-40 h-2 rounded-lg appearance-none cursor-pointer">
+                   <input type="range" id="volumeControl" min="0" max="1" step="0.01" value="0.5" 
+       class="w-32 sm:w-40 h-2 bg-gray-200 dark:bg-gray-600 rounded-full appearance-none cursor-pointer [&::-webkit-slider-thumb]:appearance-none [&::-webkit-slider-thumb]:h-3 [&::-webkit-slider-thumb]:w-3 [&::-webkit-slider-thumb]:rounded-full [&::-webkit-slider-thumb]:bg-blue-500 dark:[&::-webkit-slider-thumb]:bg-blue-400">
                     <i class="fas fa-volume-up text-gray-600 dark:text-gray-300 text-base sm:text-lg"></i>
                 </div>
             </div>
