--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         </button>
                     </div>
                     <div class="mt-3 text-sm text-gray-500 dark:text-gray-400">
-                        Tip: Try common formats like .mp3, .aac, .ogg, .pls, or .m3u
+                        Tip: If the station will not play it likely doesn't support CORS
                     </div>
                 </div>
                 
