--- a/index.html
+++ b/index.html
@@ -308,7 +308,9 @@
     <header class="bg-white dark:bg-gray-800 shadow-sm p-4 sticky top-0 z-40">
         <div class="container mx-auto flex justify-between items-center max-w-6xl px-4">
             <div class="flex items-center space-x-2">
-                <img src="icons/icon-32.png" alt="Live Beats Icon" class="w-8 h-8 rounded-lg">
+               <img src="icons/icon-48.png" 
+     alt="Live Beats Icon" 
+     class="w-8 h-8 rounded-lg">
                 <h1 class="text-xl sm:text-2xl font-bold gradient-text">
                     Live Beats WebRadio
                 </h1>
