--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <div class="space-y-4 text-sm text-gray-700 dark:text-gray-300">
                 <p>
                     <strong>Version:</strong> 1.3.0<br>
-                    A lightweight web radio player that works offline.
+                    A lightweight web radio player.
                 </p>
                 <p>
                     <strong>Features:</strong>
