--- a/index.html
+++ b/index.html
@@ -532,15 +532,26 @@
             <div class="space-y-4 text-sm text-gray-700 dark:text-gray-300">
                 <p>
               <strong>License:</strong> GNU GPL v3<br>
-<a href="https://www.gnu.org/licenses/gpl-3.0.en.html" 
-   target="_blank" 
-   rel="noopener noreferrer"
-   class="text-blue-600 dark:text-blue-400 hover:underline">
-   View License Terms
-</a>
-</p>
-<p class="text-sm mt-2">
-<strong>Version:</strong> 1.3.0
+    <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="text-blue-600 dark:text-blue-400 hover:underline">
+       View License Terms
+    </a>
+  </p>
+
+  <p>
+    <strong>Developer:</strong> Christian Flach<br>
+    <a href="https://lbwebradio.github.io/index.html"
+       target="_blank"
+       rel="noopener noreferrer"
+       class="text-blue-600 dark:text-blue-400 hover:underline">
+       GitHub Repository
+    </a>
+  </p>
+
+  <p class="text-sm">
+    <strong>Version:</strong> 1.3.0
 </p>
                 <p>
                     <strong>Features:</strong>
