--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
        target="_blank"
        rel="noopener noreferrer"
        class="text-blue-600 dark:text-blue-400 hover:underline">
-       GitHub Repository
+       LBWRP Website
     </a>
   </p>
 
