--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
   </p>
 
   <p>
-    <strong>Developer:</strong> Christian Flach 2025<br>
+   <strong>© <span id="currentYear"></span> Christian Flach</strong><br>
     <a href="https://lbwebradio.github.io/index.html"
        target="_blank"
        rel="noopener noreferrer"
