--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
         <div class="modal-content bg-white dark:bg-gray-800 p-6 rounded-xl shadow-xl w-full max-w-md border border-gray-200 dark:border-gray-700">
             <h3 class="text-xl font-semibold mb-5 flex items-center">
                 <i class="fas fa-info-circle mr-2 text-blue-500"></i>
-                <span>About Live Beats</span>
+                <span>About Live Beats WRP</span>
             </h3>
             <div class="space-y-4 text-sm text-gray-700 dark:text-gray-300">
                 <p>
