--- a/index.html
+++ b/index.html
@@ -540,15 +540,19 @@
     </a>
   </p>
 
-  <p>
-   <strong>©2025 <span id="currentYear"></span> Christian Flach</strong><br>
-    <a href="https://lbwebradio.github.io/index.html"
-       target="_blank"
-       rel="noopener noreferrer"
-       class="text-blue-600 dark:text-blue-400 hover:underline">
-       LBWRP Website
-    </a>
-  </p>
+ <p>
+  <strong>©2025 <span id="currentYear"></span> Christian Flach</strong><br>
+  <a href="mailto:your.email@example.com" 
+     class="text-blue-600 dark:text-blue-400 hover:underline">
+     Contact: livebeatswrp@gmail.com
+  </a><br>
+  <a href="https://lbwebradio.github.io/index.html"
+     target="_blank"
+     rel="noopener noreferrer"
+     class="text-blue-600 dark:text-blue-400 hover:underline">
+     LBWRP Website
+  </a>
+</p>
 
   <p class="text-sm">
     <strong>Version:</strong> 1.3.0
