--- a/index.html
+++ b/index.html
@@ -1738,7 +1738,7 @@ function fallbackShare(text) {
 function shareApp() {
     const shareData = {
         title: 'Live Beats WebRadio Player',
-        text: 'Check out this awesome web radio player PWA!',
+        text: 'Check out Live Beats WebRadio Player!',
         url: window.location.href
     };
 
