--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     </h2>
     <div class="grid grid-cols-2 gap-3">
         <button id="openAddModalBtn" class="btn-primary">
-            <i class="fas fa-plus mr-2"></i>Add
+            <i class="fas fa-plus mr-2"></i>Add Fav
         </button>
         <button id="importFavoritesBtn" class="btn-warning">
             <i class="fas fa-file-import mr-2"></i>Import
