--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
             </div>
             <div class="border-t border-gray-200 dark:border-gray-700 pt-4">
                 <h4 class="font-medium mb-2">Share App</h4>
-                <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">Share the Live Beats WebRadio Player with others</p>
+                <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">Share Live Beats WebRadio Player with others</p>
                 <button id="shareAppBtn" class="btn-primary w-full">
                     <i class="fas fa-mobile-alt mr-2"></i> Share App
                 </button>
