--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@ function shareApp() {
     const appName = 'Live Beats WebRadio Player';
     
     // Clean single-line version without duplicate URL
-    const shareText = `Check out ${appName} - A modern web radio player with thousands of stations!`;
+    const shareText = `Check out ${appName} - A free modern web radio player with thousands of stations and no ads!`;
     
     if (navigator.share) {
         // For Web Share API (mobile devices)
