--- a/index.html
+++ b/index.html
@@ -313,6 +313,23 @@
   --primary-500: #6366f1;
   --primary-600: #4f46e5;
 }
+       .theme-orange {
+  --tw-bg-opacity: 1;
+  --primary-500: #f97316;
+  --primary-600: #ea580c;
+}
+
+.theme-lime {
+  --tw-bg-opacity: 1;
+  --primary-500: #84cc16;
+  --primary-600: #65a30d;
+}
+
+.theme-emerald {
+  --tw-bg-opacity: 1;
+  --primary-500: #10b981;
+  --primary-600: #059669;
+}
        
 
 
@@ -570,6 +587,9 @@
       <button data-theme="cream" class="theme-option w-8 h-8 rounded-full bg-cream-500" title="Cream"></button>
       <button data-theme="teal" class="theme-option w-8 h-8 rounded-full bg-teal-500" title="Teal"></button>
       <button data-theme="indigo" class="theme-option w-8 h-8 rounded-full bg-indigo-500" title="Indigo"></button>
+       <button data-theme="orange" class="theme-option w-8 h-8 rounded-full bg-orange-500" title="Orange"></button>
+<button data-theme="lime" class="theme-option w-8 h-8 rounded-full bg-lime-500" title="Lime"></button>
+<button data-theme="emerald" class="theme-option w-8 h-8 rounded-full bg-emerald-500" title="Emerald"></button>
     </div>
   </div>
 </div>
@@ -1549,8 +1569,7 @@ function setTheme(themeName) {
     'theme-blue', 'theme-green', 'theme-yellow', 'theme-grey', 
     'theme-black', 'theme-pink', 'theme-red', 'theme-purple',
     'theme-cherry', 'theme-brown', 'theme-cream', 'theme-teal',
-    'theme-indigo', 'theme-orange', 'theme-lime', 'theme-emerald',
-    'theme-cyan', 'theme-violet', 'theme-fuchsia'
+    'theme-indigo', 'theme-orange', 'theme-lime', 'theme-emerald'
   );
   
   // Add the selected theme
