--- a/index.html
+++ b/index.html
@@ -566,31 +566,32 @@
     <i class="fas fa-palette"></i>
   </button>
   
-  <div id="themeOptions" class="hidden absolute right-0 top-full mt-2 w-56 bg-white dark:bg-gray-800 rounded-lg shadow-xl border border-gray-200 dark:border-gray-700 p-3 z-50">
-    <div class="grid grid-cols-5 gap-3">
-      <button data-theme="light" class="theme-option w-8 h-8 rounded-full bg-white border border-gray-300 flex items-center justify-center" title="Light">
-        <i class="fas fa-sun text-gray-700"></i>
-      </button>
-      <button data-theme="dark" class="theme-option w-8 h-8 rounded-full bg-gray-900 border border-gray-700 flex items-center justify-center" title="Dark">
-        <i class="fas fa-moon text-gray-300"></i>
-      </button>
-      <button data-theme="blue" class="theme-option w-8 h-8 rounded-full bg-blue-500" title="Blue"></button>
-      <button data-theme="green" class="theme-option w-8 h-8 rounded-full bg-green-500" title="Green"></button>
-      <button data-theme="yellow" class="theme-option w-8 h-8 rounded-full bg-yellow-500" title="Yellow"></button>
-      <button data-theme="grey" class="theme-option w-8 h-8 rounded-full bg-gray-500" title="Grey"></button>
-      <button data-theme="black" class="theme-option w-8 h-8 rounded-full bg-black" title="Black"></button>
-      <button data-theme="pink" class="theme-option w-8 h-8 rounded-full bg-pink-500" title="Pink"></button>
-      <button data-theme="red" class="theme-option w-8 h-8 rounded-full bg-red-500" title="Red"></button>
-      <button data-theme="purple" class="theme-option w-8 h-8 rounded-full bg-purple-500" title="Purple"></button>
-      <button data-theme="cherry" class="theme-option w-8 h-8 rounded-full bg-cherry-500" title="Cherry"></button>
-      <button data-theme="brown" class="theme-option w-8 h-8 rounded-full bg-brown-500" title="Brown"></button>
-      <button data-theme="cream" class="theme-option w-8 h-8 rounded-full bg-cream-500" title="Cream"></button>
-      <button data-theme="teal" class="theme-option w-8 h-8 rounded-full bg-teal-500" title="Teal"></button>
-      <button data-theme="indigo" class="theme-option w-8 h-8 rounded-full bg-indigo-500" title="Indigo"></button>
-       <button data-theme="orange" class="theme-option w-8 h-8 rounded-full bg-orange-500" title="Orange"></button>
-<button data-theme="lime" class="theme-option w-8 h-8 rounded-full bg-lime-500" title="Lime"></button>
-<button data-theme="emerald" class="theme-option w-8 h-8 rounded-full bg-emerald-500" title="Emerald"></button>
-    </div>
+<div id="themeOptions" class="hidden absolute right-0 top-full mt-2 w-56 bg-white dark:bg-gray-800 rounded-lg shadow-xl border border-gray-200 dark:border-gray-700 p-3 z-50">
+  <div class="grid grid-cols-5 gap-3">
+    <!-- Row 1 -->
+    <button data-theme="light" class="theme-option w-8 h-8 rounded-full bg-white border border-gray-300 flex items-center justify-center" title="Light">
+      <i class="fas fa-sun text-gray-700"></i>
+    </button>
+    <button data-theme="dark" class="theme-option w-8 h-8 rounded-full bg-gray-900 border border-gray-700 flex items-center justify-center" title="Dark">
+      <i class="fas fa-moon text-gray-300"></i>
+    </button>
+    <button data-theme="blue" class="theme-option w-8 h-8 rounded-full bg-blue-500" title="Blue"></button>
+    <button data-theme="green" class="theme-option w-8 h-8 rounded-full bg-green-500" title="Green"></button>
+    <button data-theme="yellow" class="theme-option w-8 h-8 rounded-full bg-yellow-500" title="Yellow"></button>
+    
+    <!-- Row 2 -->
+    <button data-theme="grey" class="theme-option w-8 h-8 rounded-full bg-gray-500" title="Grey"></button>
+    <button data-theme="black" class="theme-option w-8 h-8 rounded-full bg-black" title="Black"></button>
+    <button data-theme="pink" class="theme-option w-8 h-8 rounded-full bg-pink-500" title="Pink"></button>
+    <button data-theme="red" class="theme-option w-8 h-8 rounded-full bg-red-500" title="Red"></button>
+    <button data-theme="purple" class="theme-option w-8 h-8 rounded-full bg-purple-500" title="Purple"></button>
+    
+    <!-- Row 3 -->
+    <button data-theme="orange" class="theme-option w-8 h-8 rounded-full bg-orange-500" title="Orange"></button>
+    <button data-theme="lime" class="theme-option w-8 h-8 rounded-full bg-lime-500" title="Lime"></button>
+    <button data-theme="emerald" class="theme-option w-8 h-8 rounded-full bg-emerald-500" title="Emerald"></button>
+    <button data-theme="teal" class="theme-option w-8 h-8 rounded-full bg-teal-500" title="Teal"></button>
+    <button data-theme="indigo" class="theme-option w-8 h-8 rounded-full bg-indigo-500" title="Indigo"></button>
   </div>
 </div>
   
@@ -1564,29 +1565,27 @@ function showMessage(message, type = 'info', duration = 3000) {
    // --- Theme Management ---
 function setTheme(themeName) {
   // Remove all theme classes
-  document.documentElement.classList.remove('dark', 'light');
-  document.documentElement.classList.remove(
-    'theme-blue', 'theme-green', 'theme-yellow', 'theme-grey', 
-    'theme-black', 'theme-pink', 'theme-red', 'theme-purple',
-    'theme-cherry', 'theme-brown', 'theme-cream', 'theme-teal',
-    'theme-indigo', 'theme-orange', 'theme-lime', 'theme-emerald'
-  );
+  const themeClasses = [
+    'light', 'dark', 
+    'theme-blue', 'theme-green', 'theme-yellow', 
+    'theme-grey', 'theme-black', 'theme-pink',
+    'theme-red', 'theme-purple', 'theme-orange',
+    'theme-lime', 'theme-emerald', 'theme-teal',
+    'theme-indigo'
+  ];
+  
+  document.documentElement.classList.remove(...themeClasses);
   
   // Add the selected theme
-  if (themeName === 'dark') {
-    document.documentElement.classList.add('dark');
-  } else if (themeName === 'light') {
-    document.documentElement.classList.add('light');
+  if (themeName === 'dark' || themeName === 'light') {
+    document.documentElement.classList.add(themeName);
   } else {
     document.documentElement.classList.add(`theme-${themeName}`);
   }
   
-  // Update selected state in theme options
+  // Update selected state
   document.querySelectorAll('.theme-option').forEach(option => {
-    option.classList.remove('selected');
-    if (option.dataset.theme === themeName) {
-      option.classList.add('selected');
-    }
+    option.classList.toggle('selected', option.dataset.theme === themeName);
   });
   
   localStorage.setItem('theme', themeName);
