--- a/index.html
+++ b/index.html
@@ -749,13 +749,13 @@
             <span>Choose Theme</span>
         </h3>
         <div class="grid grid-cols-2 gap-4">
-            <button id="lightThemeBtn" class="flex flex-col items-center p-4 rounded-lg border-2 border-gray-200 dark:border-gray-600 hover:border-blue-500 dark:hover:border-blue-400 transition-colors">
-                <div class="w-16 h-16 rounded-full bg-white border-2 border-gray-300 mb-2"></div>
-                <span>Light</span>
+            <button id="lightThemeBtn" class="flex flex-col items-center p-2 rounded-lg border-2 border-gray-200 dark:border-gray-600 hover:border-blue-500 dark:hover:border-blue-400 transition-colors">
+                <div class="w-8 h-8 rounded-full bg-white border-2 border-gray-300 mb-1"></div>
+                 <span class="text-sm">Light</span>
             </button>
-            <button id="darkThemeBtn" class="flex flex-col items-center p-4 rounded-lg border-2 border-gray-200 dark:border-gray-600 hover:border-blue-500 dark:hover:border-blue-400 transition-colors">
-                <div class="w-16 h-16 rounded-full bg-gray-900 border-2 border-gray-700 mb-2"></div>
-                <span>Dark</span>
+            <button id="darkThemeBtn" class="flex flex-col items-center p-2 rounded-lg border-2 border-gray-200 dark:border-gray-600 hover:border-blue-500 dark:hover:border-blue-400 transition-colors">
+                <div class="w-16 h-16 rounded-full bg-gray-900 border-2 border-gray-700 mb-1"></div>
+               <span class="text-sm">Dark</span>
             </button>
         </div>
         <div class="mt-6 flex justify-end">
