--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@
         .dark input:focus, .dark textarea:focus, .dark select:focus, .dark button:focus-visible {
             outline-color: #60a5fa;
         }
+        .banner-container {
+         text-align: center;
+         margin: 20px 0;
+      }
+      .banner-image {
+         max-width: 100%;
+         height: auto;
+      }
+      .sr-only {
+         position: absolute;
+         width: 1px;
+         height: 1px;
+         padding: 0;
+         margin: -1px;
+         overflow: hidden;
+         clip: rect(0, 0, 0, 0);
+         white-space: nowrap;
+         border-width: 0;
+      }
 
 
 /* Share Modal Styles */
@@ -368,9 +387,10 @@
                <img src="icons/icon-48.png" 
      alt="Live Beats Icon" 
      class="w-8 h-8 rounded-lg">
-                <h1 class="text-xl sm:text-2xl font-bold gradient-text">
-                    Live Beats WebRadio
-                </h1>
+                <img src="https://github.com/LBWebRadio/LBWA/blob/main/lbbanner.png?raw=true" 
+                    alt="Live Beats WebRadio" 
+                    class="h-8 sm:h-10" 
+                    style="max-height: 40px;">
             </div>
             
             <div class="flex items-center space-x-4">
