--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
     <audio id="audioPlayer"></audio>
 
-   <header class="bg-white dark:bg-gray-800 shadow-sm p-4 sticky top-0 z-40">
+  <header class="bg-white dark:bg-gray-800 shadow-sm p-4 sticky top-0 z-40">
     <div class="container mx-auto flex justify-between items-center max-w-6xl px-4">
         <div class="flex items-center space-x-2">
            <img src="icons/icon-48.png" 
@@ -389,8 +389,8 @@
                 class="w-8 h-8 rounded-lg">
             <img src="https://github.com/LBWebRadio/LBWA/blob/main/lbbanner.png?raw=true" 
                 alt="Live Beats WebRadio" 
-                class="h-10 sm:h-12 md:h-14" 
-                style="max-width: 300px; height: auto;">
+                class="h-10 sm:h-12 md:h-14 lg:h-16"
+                style="max-width: min(100%, 400px); height: auto;">
         </div>
         
         <div class="flex items-center space-x-4">
