--- a/index.html
+++ b/index.html
@@ -381,16 +381,15 @@
 
     <audio id="audioPlayer"></audio>
 
-<header class="bg-white dark:bg-gray-800 shadow-sm py-2 px-4 sticky top-0 z-40">
-    <div class="container mx-auto flex justify-between items-center max-w-6xl">
+<header class="bg-white dark:bg-gray-800 shadow-sm py-2 sticky top-0 z-40 max-h-16 overflow-hidden">
+    <div class="container mx-auto flex justify-between items-center max-w-6xl px-4">
         <div class="flex items-center space-x-2">
            <img src="icons/icon-48.png" 
                 alt="Live Beats Icon" 
                 class="w-8 h-8 rounded-lg">
             <img src="https://github.com/LBWebRadio/LBWA/blob/main/lbbanner.png?raw=true" 
-                alt="Live Beats WebRadio" 
-                class="h-10 sm:h-12"
-                style="max-height: 48px; width: auto;">
+                alt="Live Beats WebRadio"
+                style="height: 42px; width: auto; max-width: 100%;">
         </div>
         
         <div class="flex items-center space-x-4">
