--- a/index.html
+++ b/index.html
@@ -381,15 +381,18 @@
 
     <audio id="audioPlayer"></audio>
 
-<header class="bg-white dark:bg-gray-800 shadow-sm py-2 sticky top-0 z-40 max-h-16 overflow-hidden">
-    <div class="container mx-auto flex justify-between items-center max-w-6xl px-4">
+<header class="bg-white dark:bg-gray-800 shadow-sm py-1 sticky top-0 z-40" style="height: 60px;">
+    <div class="container mx-auto flex justify-between items-center max-w-6xl px-4 h-full">
         <div class="flex items-center space-x-2">
            <img src="icons/icon-48.png" 
                 alt="Live Beats Icon" 
                 class="w-8 h-8 rounded-lg">
+            <!-- Direct image embed with fixed dimensions -->
             <img src="https://github.com/LBWebRadio/LBWA/blob/main/lbbanner.png?raw=true" 
                 alt="Live Beats WebRadio"
-                style="height: 42px; width: auto; max-width: 100%;">
+                width="250" 
+                height="50"
+                style="object-fit: contain;">
         </div>
         
         <div class="flex items-center space-x-4">
