--- a/index.html
+++ b/index.html
@@ -387,12 +387,10 @@
            <img src="icons/icon-48.png" 
                 alt="Live Beats Icon" 
                 class="w-8 h-8 rounded-lg">
-            <!-- Direct image embed with fixed dimensions -->
+            <!-- Direct style control - ADJUST THESE VALUES -->
             <img src="https://github.com/LBWebRadio/LBWA/blob/main/lbbanner.png?raw=true" 
                 alt="Live Beats WebRadio"
-                width="250" 
-                height="15"
-                style="object-fit: contain;">
+                style="width: 180px; height: 30px; max-width: 180px; max-height: 30px;">
         </div>
         
         <div class="flex items-center space-x-4">
