--- a/index.html
+++ b/index.html
@@ -387,10 +387,12 @@
            <img src="icons/icon-48.png" 
                 alt="Live Beats Icon" 
                 class="w-8 h-8 rounded-lg">
-            <!-- Direct style control - ADJUST THESE VALUES -->
-            <img src="https://github.com/LBWebRadio/LBWA/blob/main/lbbanner.png?raw=true" 
-                alt="Live Beats WebRadio"
-                style="width: 180px; height: 30px; max-width: 180px; max-height: 30px;">
+            <!-- Fixed-width container with proportional image -->
+            <div style="width: 180px; height: 40px; display: flex; align-items: center;">
+                <img src="https://github.com/LBWebRadio/LBWA/blob/main/lbbanner.png?raw=true" 
+                    alt="Live Beats WebRadio"
+                    style="max-width: 100%; max-height: 100%; width: auto; height: auto;">
+            </div>
         </div>
         
         <div class="flex items-center space-x-4">
