--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
                <img src="icons/icon-48.png" 
      alt="Live Beats Icon" 
      class="w-8 h-8 rounded-lg">
-                <h1 class="text-xl sm:text-2xl font-bold gradient-text">
-                    Live Beats WebRadio
-                </h1>
+                <h1 class="text-xl sm:text-2xl font-bold bg-gradient-to-r from-blue-500 to-blue-600 text-transparent bg-clip-text">
+    Live Beats WebRadio
+</h1>
             </div>
             
             <div class="flex items-center space-x-4">
