--- a/index.html
+++ b/index.html
@@ -527,10 +527,10 @@
                     LIVE
                 </span>
                 <!-- Play Timer - Added Here -->
-                <span id="playTime" class="text-xs text-gray-500 dark:text-gray-400">
-                    <i class="fas fa-clock ml-2 mr-1"></i>
-                    <span>00:00:00</span>
-                </span>
+            <span id="playTime" class="text-gray-500 dark:text-gray-400 ml-2 flex items-center">
+    <i class="fas fa-clock mr-1.5 text-[0.95rem]"></i> 
+    <span class="text-[0.95rem] font-mono">00:00:00</span> 
+</span>
             </div>
             <!-- Technical Info (Codec/Bitrate) - Added Here -->
             <div id="techInfoContainer" class="flex flex-wrap gap-1 mt-2">
